--- a/DigitalPanAndPaper_AdventureManager/app/src/main/res/values/strings.xml
+++ b/DigitalPanAndPaper_AdventureManager/app/src/main/res/values/strings.xml
@@ -6,7 +6,6 @@
     <string name="password_label">Password</string>
     <string name="NoChars_label">No characters available.</string>
     <string name="PlaceHolder_label">.....Place holder.....</string>
-    <string name="New_character_title">Create new character</string>
     <string name="name_label">Name: </string>
     <string name="surName_label">Surname: </string>
     <string name="Race_label">Race: </string>
@@ -17,7 +16,9 @@
     <string name="label_int">INT</string>
     <string name="label_wis">WIS</string>
     <string name="label_cha">CHA</string>
-
+    <!--Titles-->
+    <string name="New_character_title">Create new character</string>
+    <string name="title_Character_Details">Character details</string>
     <!--Buttons-->
     <string name="submit_button">Submit</string>
     <string name="choose_button">Choose</string>
@@ -25,6 +26,8 @@
     <string name="addNewChar_button">Add New Character</string>
     <string name="button_next">Next</string>
     <string name="button_back">Back</string>
+    <string name="button_save">Save</string>
+
     <!--Errors-->
     <string name="username_error">Error - Username invalid</string>
     <string name="password_error">Error - Password invalid</string>
