Moved details to an element for future reuse

--- a/DigitalPanAndPaper_AdventureManager/app/src/main/res/values/strings.xml
+++ b/DigitalPanAndPaper_AdventureManager/app/src/main/res/values/strings.xml
@@ -35,7 +35,7 @@
     <string name="button_next">Next</string>
     <string name="button_back">Back</string>
     <string name="button_save">Save</string>
-    <string name="button_Manage">Manage...</string>
+    <string name="button_Manage">Manage..</string>
 
 
     <!--Errors-->
