Added some values

--- a/DigitalPanAndPaper_AdventureManager/app/src/main/res/values/strings.xml
+++ b/DigitalPanAndPaper_AdventureManager/app/src/main/res/values/strings.xml
@@ -55,5 +55,7 @@
     <string name="label_log">Log:</string>
     <string name="label_d0">d0</string>
     <string name="label_zero">0</string>
+    <string name="label_six">6</string>
+    <string name="label_d">d</string>
 
 </resources>
