changed image buttons to image view

--- a/DigitalPanAndPaper_AdventureManager/app/src/main/res/values/strings.xml
+++ b/DigitalPanAndPaper_AdventureManager/app/src/main/res/values/strings.xml
@@ -57,5 +57,6 @@
     <string name="label_zero">0</string>
     <string name="label_six">6</string>
     <string name="label_d">d</string>
+    <string name="label_non">----</string>
 
 </resources>
